# medvision-mcp

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
contracts/: __init__.py  mcp-client.ts  mcp_tools.py  models.py
docs/: AGENT_TASKS.md  DEVELOPMENT.md  KICKOFF.md  spec.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
src/medvision_mcp/: __init__.py  server.py
src/medvision_mcp/tools/: __init__.py  visual_rag.py
src/medvision_mcp/ui/: __init__.py  app.py
